deploy/gitea/templates/gitea-service-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-http
  namespace: gitea
spec:
  clusterIP: None
  clusterIPs:
  - None
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  sessionAffinity: None
  type: ClusterIP
