deploy/gitea/templates/gitea-service-ssh.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
  namespace: gitea
spec:
  clusterIP: None
  clusterIPs:
  - None
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: ssh
    port: 22
    protocol: TCP
    targetPort: 22
  sessionAffinity: None
  type: ClusterIP
