deploy/gitea/templates/gitea-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea
  labels:
    app: gitea
spec:
  ports:
    - port: 3001
      targetPort: 3000
      name: gitea
  selector:
    app: gitea
  type: ClusterIP
