deploy/gitea/templates/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-mariadb
  namespace: gitea
  labels:
    app: gitea
spec:
  ports:
    - port: 3306
  selector:
    app: gitea
    tier: mariadb
  clusterIP: None
