deploy/gitea/templates/gitea-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  namespace: gitea
  labels:
    app.kubernetes.io/instance: gitea
spec:
  rules:
    - host: gitea.nuc.one
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: gitea-http
                port:
                  number: 3001
